# Adrius

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  DEVELOPMENT.md  LICENSE  README.md  main.cpp  vcpkg.json
.github/: CODEOWNERS  CONTRIBUTING.md  pull_request_template.md
cmake/: AdriusConfig.cmake.in
docs/: boost-multiprecision-backend.md  continued-fractions.md  design-decisions.md  getting-started.md  illl-algorithm.md  lll.md  python-bindings.md  simultaneous.md
examples/: CMakeLists.txt
examples/best_rational/: main.cpp
examples/bosma_smeets/: main.cpp
examples/cf_expansion/: main.cpp
examples/illl/: main.cpp
examples/lll/: main.cpp
examples/simultaneous/: main.cpp
include/adrius/: adrius.hpp  version.hpp
include/adrius/approx/: continued_fraction.hpp  illl.hpp  rational.hpp  simultaneous.hpp
include/adrius/backend/: boost_multiprecision.hpp  default_backend.hpp  eigen.hpp
include/adrius/core/: concepts.hpp  error.hpp  params.hpp  traits.hpp
include/adrius/linalg/: gram_schmidt.hpp  lll.hpp
include/adrius/util/: rational_type.hpp
python/: CMakeLists.txt  adrius_py.cpp  conftest.py
python/adrius/: __init__.py
python/tests/: test_continued_fractions.py  test_illl.py  test_lll.py  test_rational.py  test_simultaneous.py
src/: main.cpp
tests/: CMakeLists.txt  test_boost_backend.cpp  test_concepts.cpp  test_continued_fraction.cpp  test_gram_schmidt.cpp  test_illl.cpp  test_lll.cpp  test_rational.cpp
